Add command line flag for source code file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = { version = "4.5.21", features = ["derive"] }
 fuser = "0.15.1"
 libc = "0.2.167"
 tree-sitter = "0.24.4"
